welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not enough arguments for method growFlowers: (red: java.awt.Color, cyan: java.awt.Color, orange: java.awt.Color, pink: java.awt.Color, green: java.awt.Color)Unit.
Unspecified value parameters red, cyan, orange, ...
		growFlowers();
                           ^