welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def flower(c:Color)
	{setCouleurBrosse(c)
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	avance()
	setCouleurBrosse(Color.YELLOW)
	leveBrosse()
	droite()}
	
def growFlowers(red:Color,cyan:Color,orange:Color,pink:Color,green:Color)
{
flower(red)
avance()
avance()
avance()
flower(cyan)
recule()
recule()
recule()
droite()
avance()
avance()
gauche()
flower(orange)
recule()
recule()
recule()
droite()
avance()
avance()
gauche()
flower(pink)
avance()
avance()
avance()
flower(green)
recule()
recule()
recule()
recule()
recule()
}

growFlowers(Color.RED,Color.CYAN,Color.ORANGE,Color.PINK,Color.GREEN)

def flowerCase()
{
gauche()
avance()
avance()
droite()
avance()
avance()
avance()
avance()
avance()
avance()
flower(Color.BLUE)
avance()
gauche()
avance()
avance()
droite()
growFlowers(Color.RED,Color.CYAN,Color.ORANGE,Color.PINK,Color.GREEN)
}
